@@ -214,7 +214,7 @@ while [ -n "$1" ] ; do
       SOURCE=$(echo $1 | cut -f2 -d=)
       shift
     ;; 
-    install|reinstall|upgrade|remove|blacklist|download)
+    install|reinstall|upgrade|remove|download)
       CMD=$1
       shift
       if [ -n "$1" ]; then
@@ -480,20 +480,8 @@ case "$CMD" in
 			grep -e "^\([a-z]\)" $CONF/blacklist | $MORECMD
 			cleanup
 		fi
-
-		makelist ${INPUTLIST}
-		for i in $LIST; do
-			BASENAME=$(cutpkg $i)
-			BLACKLIST="$BLACKLIST $BASENAME"
-		done
-		BLACKLIST=$(echo $BLACKLIST | tr ' ' "\n")
-		if [ "$BLACKLIST" = "" ]; then
-			echo -e "No packages match the pattern."
-			cleanup
-		else
-			showlist "$BLACKLIST" $CMD
-		fi
-
+		
+		# As of 15.0, this function just runs /bin/false and exits with a comment
 		blacklist_pkg
 	;;
 	file-search)
@@ -605,11 +593,11 @@ esac
 #
 # Executes the post-install. This is the default
 # Before runs post-install, check if the slackpkg option is
-# remove, search, update, blacklist, info or clean-system. 
+# remove, search, update, info or clean-system. 
 # That options don't change configurations files and, if 
 # someone remove the kernel, i hope he knows what is doing.
 #
-for i in check-updates remove search file-search update blacklist info \
+for i in check-updates remove search file-search update info \
 	 clean-system download generate-template remove-template; do
 	if [ "$CMD" = "$i" ]; then
 		POSTINST=off
